# sample-cloudops-agent-amazon-bedrock-agentcore

./: .gitignore  README.md  scan-report-update2.json  scan-report.json  slingshot-scan1.json  slingshot-scan2.json
agentcore/: Dockerfile  agent_runtime.py  authorization_model.py  pytest.ini  requirements.txt  streamable_http_bearer.py  streamable_http_sigv4.py
cdk/: jest.config.js  package-lock.json  package.json
codebuild-scripts/: buildspec-billing.yml  buildspec-cloudtrail.yml  buildspec-cloudwatch.yml  buildspec-inventory.yml  (+6 more)
inventory-mcp-agentcore/eol-scraper/: pyproject.toml
inventory-mcp-agentcore/eol-scraper/eol_scraper/: main.py  server.py  verification.py
inventory-mcp-agentcore/eol-scraper/eol_scraper/scrapers/: eks.py  elasticache.py  msk.py  rds.py
inventory-mcp-agentcore/eol-scraper/tests/: test_other_scrapers.py  test_rds_bugfix.py  test_rds_preservation.py  test_rds_verification.py  test_verification_shared.py
mcp-servers/inventory/: .dockerignore  Dockerfile  pyproject.toml
mcp-servers/inventory/eol-scraper/: requirements.txt
mcp-servers/inventory/eol-scraper/eol_scraper/: main.py
mcp-servers/inventory/eol-scraper/eol_scraper/scrapers/: opensearch.py  rds.py
mcp-servers/inventory/src/inventory_mcp_server/: aws_client.py  server.py
mcp-servers/inventory/src/inventory_mcp_server/tools/: eks.py  elasticache.py  opensearch.py  rds.py
mcp-servers/inventory/tests/: test_property_cache_consistency.py  test_property_deduplication.py  test_property_eol_enrichment.py  test_property_eol_roundtrip.py  test_property_multi_region.py
(+216 files in other folders)
