[project]
name = "eol-scraper-mcp-server"
version = "0.1.0"
description = "MCP Server that scrapes AWS docs for end-of-support schedules and stores them in DynamoDB."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "boto3>=1.35.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
eol-scraper-mcp-server = "eol_scraper.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eol_scraper"]
