[project]
name = "inventory-mcp-server"
version = "0.1.0"
description = "MCP Server for AWS inventory software version management (EKS, RDS, OpenSearch, ElastiCache, MSK)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "boto3>=1.35.0",
    "uvicorn>=0.27.0",
    "starlette>=0.36.0",
]

[project.scripts]
inventory-mcp-server = "inventory_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inventory_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
